@@ -45,3 +45,4 @@ Merged changes:
 7297							: tooltip on label
 7299							: block UI when thread is running
 7302							: fix crash with library CrashRpt.dll
+7306							: soring arrows
