@@ -9,6 +9,7 @@
        global ignore patterns. (Stefan)
 - CHG: The ancestry of two nodes is ignored when showing the differences
        in the repository browser. (Stefan)
+- CHG: The sort arrows now use the same orientation as explorer. (Stefan)
 - BUG: The header in TortoiseBlame was shown in the wrong font in translated
        versions. (Kazutoshi Satoda)
 - BUG: The state of the "Floppy drives" checkbox was not set correctly
